--- a/devise/registrations/new.html.erb
+++ b/devise/registrations/new.html.erb
@@ -1,25 +1,28 @@
-  
-<div class="panel panel-default">
-  <div class="panel-heading">
-    <h1>Sign up</h1>
-  </div>
-  <div class="panel-body">
-    <%= form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f| %>
-      <%= devise_error_messages! %>
-      <div class="form-group">
-        <%= f.label :email %>
-        <%= f.email_field :email, autofocus: true, class: "form-control" %>
+    
+<div class="modal-dialog">
+  <div class="modal-content">
+    <div class="modal-header">
+      <h1 class="text-center" >Register</h1>
+    </div>
+    <div class="modal-body">
+      <%= form_for(resource, :as => resource_name, :url => registration_path(resource_name), 
+     :html => {:class => 'form col-md-12 center-block'} ) do |f| %>
+        <%= devise_error_messages! %>
+        <div class="form-group">
+          <%= f.email_field :email, class: "form-control input-lg", placeholder: "Email" %>
+        </div>
+        <div class="form-group">
+          <%= f.password_field :password, class: "form-control input-lg", placeholder: "Password" %>
+        </div>
+        <div class="form-group">
+          <%= f.submit "Register", class: "btn btn-primary btn-lg btn-block" %>
+        </div>
+      <% end %>
+    </div>
+    <div class="modal-footer" style="border-top:none" >
+      <div class="col-md-12">
+          <%= render "devise/shared/links" %>
       </div>
-      <div class="form-group">
-        <%= f.label :password %>
-        <%= f.password_field :password, class: "form-control" %>
-      </div>
-      <div class="form-group">
-        <%= f.submit "Sign up", class: "btn btn-primary" %>
-      </div>
-    <% end %>
-  </div>
-  <div class="panel-footer">
-    <%= render "devise/shared/links" %>
+    </div>
   </div>
 </div>
